--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           php-version: "8.5"
           extensions: intl, pdo_mysql
-          coverage: none
+          coverage: pcov
 
       - name: Get Composer cache directory
         id: composer-cache
