Fund transfer API, moneyphp/money, single migration, PHP_CodeSniffer, Rector PHP 8.5
- Add POST /api/transfer: idempotency (Redis), validation, currency conversion
- Domain: Account, AccountId, Currency, InsufficientBalanceException
- Application: TransferFundsCommand/Handler, ExchangeRateProviderInterface
- Infrastructure: TransferController, Doctrine AccountRepository, ConfigurableExchangeRateProvider
- One migration (Schema API): account table (id, balance_minor, currency)
- Replace brick/money with moneyphp/money; add bcmath to Dockerfile and CI
- Code quality: PHP_CodeSniffer (phpcs/phpcbf), Rector (PHP 8.5), remove PHP-CS-Fixer
- Tests: PHPUnit attributes (#[Test], #[Group]), TransactionalWebTestCase
- Fix line length for phpcs (ConfigurableExchangeRateProvider, TransferController, tests)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.5"
-          extensions: intl, pdo_mysql
+          extensions: intl, pdo_mysql, bcmath
           coverage: pcov
 
       - name: Get Composer cache directory
@@ -45,6 +45,13 @@ jobs:
 
       - name: Install dependencies
         run: composer install --no-progress --no-interaction --prefer-dist
+
+      - name: Run migrations
+        env:
+          APP_ENV: test
+          APP_SECRET: test-secret
+          DATABASE_URL: "mysql://app:app@127.0.0.1:3306/app_test?serverVersion=8.4"
+        run: php bin/console doctrine:migrations:migrate --no-interaction
 
       - name: Run tests
         env:
