--- a/.env.test
+++ b/.env.test
@@ -4,4 +4,5 @@ APP_DEBUG=1
 KERNEL_CLASS=App\Kernel
 
 DATABASE_URL="mysql://app:app@127.0.0.1:3306/app_test?serverVersion=8.0"
+REDIS_URL=redis://127.0.0.1:6379
 TEMPORAL_ADDRESS=127.0.0.1:7233
