--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -5,12 +5,12 @@ doctrine:
     orm:
         validate_xml_mapping: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-        auto_mapping: true
+        auto_mapping: false
         mappings:
-            Domain:
+            InfrastructurePersistence:
                 type: attribute
-                dir: '%kernel.project_dir%/src/Domain'
-                prefix: 'App\Domain'
+                dir: '%kernel.project_dir%/src/Infrastructure/Persistence/Doctrine/Entity'
+                prefix: 'App\Infrastructure\Persistence\Doctrine\Entity'
                 is_bundle: false
 
 when@test:
