--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,6 +2,9 @@ framework:
     secret: '%env(APP_SECRET)%'
     http_method_override: false
     handle_all_throwables: true
+    cache:
+        app: cache.adapter.redis
+        default_redis_provider: '%env(REDIS_URL)%'
     session:
         handler_id: null
         cookie_secure: auto
@@ -13,5 +16,7 @@ framework:
 when@test:
     framework:
         test: true
+        cache:
+            app: cache.adapter.filesystem
         session:
             storage_factory_id: session.storage.factory.mock_file
