Fund transfer API: ledger, holds, FX, idempotency via Redis
- POST /api/transfer with idempotency_key, same/cross-currency
- Ledger entries (2 same-currency, 4 FX with technical accounts), holds (Active→Captured)
- Idempotency: Redis first (IdempotencyStore), then DB; 24h TTL
- Single migration (doctrine:migrations:diff) with transactions.from_account_id/to_account_id
- TransactionRepository, LedgerRepository, HoldRepository; pessimistic locking
- Docs: README, FX_LEDGER.md

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -2,6 +2,9 @@ doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
         profiling_collect_backtrace: '%kernel.debug%'
+        types:
+            money: App\Infrastructure\Persistence\Doctrine\Type\MoneyType
+            uuid_string: App\Infrastructure\Persistence\Doctrine\Type\UuidStringType
     orm:
         validate_xml_mapping: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
@@ -12,11 +15,6 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Infrastructure/Persistence/Doctrine/Entity'
                 prefix: 'App\Infrastructure\Persistence\Doctrine\Entity'
                 is_bundle: false
-
-when@test:
-    doctrine:
-        dbal:
-            dbname_suffix: '_test%env(default::TEST_TOKEN)%'
 
 when@prod:
     doctrine:
