--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.5",
         "ext-bcmath": "*",
         "baldinof/roadrunner-bundle": "^3.1",
+        "brick/math": "^0.14.1",
         "doctrine/dbal": "^4.0",
         "doctrine/doctrine-bundle": "^3.2",
         "doctrine/doctrine-migrations-bundle": "^3.4",
@@ -19,16 +20,18 @@
         "symfony/messenger": "*",
         "symfony/monolog-bundle": "^4.0",
         "symfony/runtime": "^8.0",
+        "symfony/uid": "^8.0",
         "symfony/validator": "^8.0",
         "symfony/yaml": "^8.0",
-        "temporal/sdk": "^2.16"
+        "temporal/sdk": "^2.16",
+        "yceruto/money-bundle": "^1.5"
     },
     "require-dev": {
         "phpstan/phpstan": "^2.0",
-        "rector/rector": "^2.0",
-        "squizlabs/php_codesniffer": "^3.10",
         "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^11.0",
+        "rector/rector": "^2.0",
+        "squizlabs/php_codesniffer": "^3.10",
         "symfony/browser-kit": "^8.0",
         "symfony/css-selector": "^8.0",
         "symfony/maker-bundle": "^1.52",
@@ -63,10 +66,21 @@
         "test": "bin/phpunit",
         "test:unit": "bin/phpunit tests/Unit",
         "test:integration": "bin/phpunit tests/Integration",
+        "test:db-reset": [
+            "@php bin/console doctrine:schema:drop --full-database --force --env=test",
+            "@php bin/console doctrine:migrations:migrate --no-interaction --env=test"
+        ],
+        "migrations:diff": "php bin/console doctrine:migrations:diff",
+        "migrations:migrate": "php bin/console doctrine:migrations:migrate --no-interaction",
         "rector": "rector process",
         "rector:dry": "rector process --dry-run",
+        "phpstan": "phpstan analyse --memory-limit=512M",
         "phpcs": "phpcs",
-        "phpcbf": "phpcbf"
+        "phpcbf": "phpcbf",
+        "qa": [
+            "@phpstan",
+            "@phpcs"
+        ]
     },
     "conflict": {
         "symfony/symfony": "*"
