--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,5 +4,4 @@ parameters:
     level: max
     paths:
         - src
-    symfony:
-        containerXmlPath: var/cache/dev/App_KernelDevDebugContainer.xml
+        - tests
