API JSON errors, README cleanup, seed cross-currency accounts, http client
- JsonExceptionSubscriber: return JSON for all API errors (/api/* and Accept: application/json)
- SeedManualTestAccountsCommand: add accounts 020 (200 USD) and 021 (0 EUR) for cross-currency testing
- README: TOC, single getting-started flow, API tables, DB connection, project structure
- http/transfer.http: PhpStorm/VS Code requests for health and transfer (same-currency, idempotent, cross-currency, validation)
- TransferControllerTest: English comments
- config: register JsonExceptionSubscriber with kernel.environment

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -55,3 +55,7 @@ services:
     App\Infrastructure\Idempotency\RedisIdempotencyStore:
         arguments:
             $cache: '@cache.app'
+
+    App\Infrastructure\Http\EventSubscriber\JsonExceptionSubscriber:
+        arguments:
+            $environment: '%kernel.environment%'
