Improvements: JSON errors, health check, README, .env.example, idempotency, QA fixes

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -59,3 +59,8 @@ services:
     App\Infrastructure\Http\EventSubscriber\JsonExceptionSubscriber:
         arguments:
             $environment: '%kernel.environment%'
+
+    App\Infrastructure\Http\Controller\HealthController:
+        arguments:
+            $connection: '@doctrine.dbal.default_connection'
+            $cache: '@cache.app'
